--- a/src/components/navMenu/NavBar.scss
+++ b/src/components/navMenu/NavBar.scss
@@ -28,6 +28,9 @@ header {
     text-transform: uppercase;
     font-size: 0.8rem;
 }
+.nav-menu a:active{
+    background-color: rgba(255, 255, 255, 0.2);
+}
 .nav-menu a:hover{
     background-color: rgba(255, 255, 255, 0.2);
 }
