--- a/src/components/mainBody/liveScore/LiveData.scss
+++ b/src/components/mainBody/liveScore/LiveData.scss
@@ -1,7 +1,7 @@
 .livedata {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 0.6rem;
   padding: 0.2rem 1rem;
   background-color: rgba(200, 200, 200, 0.5);
   border-bottom: 1px solid grey;
@@ -10,6 +10,9 @@
 .livedata-place {
   font-weight: 600;
   line-height: 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
 }
 
 .livedata-wrapper {
@@ -23,7 +26,7 @@
   background-color: #cfcfcf;
   padding: 0.2rem 1.2rem;
   margin: 0.2rem 0.2rem;
-  border-radius: 8px;
+  border-radius: 6px;
   text-align: center;
 }
 
@@ -41,3 +44,15 @@
   font-weight: 700;
   padding: 0.4rem 0rem;
 }
+
+@media screen and (max-width: 768px) {
+  .livedata {
+    padding: 0.2rem 0.2rem;
+  }
+  .livedata-tab {
+    padding: 0.2rem 0.8rem;
+    margin: 0.2rem 0.2rem;
+  }
+}
+
+
