--- a/src/components/navbar-tabs/sports/SportsData.scss
+++ b/src/components/navbar-tabs/sports/SportsData.scss
@@ -1,22 +1,49 @@
-.right-live {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-.livedata-time{
-    font-size: 13px;
-    font-weight: 500;
-}
-.league-name{
-    display: flex;
-    justify-content: end;
-    gap: 0.6rem;
 
+.livedata{
+    display: flex;
 }
-.league-name span{
-    color: #fff;
-    border: 1px solid grey;
-    background-color: grey;
-    padding: 1px 5px;
-    border-radius: 4px;
+.livedata-time {
+  font-size: 13px;
+  font-weight: 500;
 }
+.league-name {
+  display: flex;
+  justify-content: end;
+  gap: 0.6rem;
+}
+.league-name span {
+  color: #fff;
+  border: 1px solid grey;
+  background-color: grey;
+  padding: 1px 5px;
+  border-radius: 4px;
+}
+.names{
+    font-size: 14px;
+}
+@media screen and (max-width: 768px) {
+  .right-live {
+    gap: 0.8rem;
+  }
+}
+@media screen and (max-width: 480px){
+    .livedata-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .right-live{
+    width: 100%;
+    }
+    .livedata-tab{
+        width: 16%;
+    }
+    .livedata{
+        display: flex;
+        flex-direction: column;
+    }
+    .livedata-place{
+        width: 100%;
+        padding: 0 0.4rem;
+    }
+  }
