--- a/src/components/navbar-tabs/indianCasino/CenterBody.scss
+++ b/src/components/navbar-tabs/indianCasino/CenterBody.scss
@@ -1,6 +1,6 @@
 .image-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 10px;
 }
 
@@ -61,6 +61,32 @@
   text-align: left;
   text-overflow: ellipsis;
   font-weight: 500;
-  margin-bottom: 1rem;
-  font-size: 1.6rem;
+  margin-top: 1rem;
+  margin-bottom: 0.3rem;
+  font-size: 1.5rem;
+}
+.swiper-container{
+    margin-top: 1rem;
+}
+
+.swiper-button-next:after {
+    font-size: 1rem !important;
+    font-weight: bold;
+    background: rgba(0,0,0,0.6);
+    padding: 0.6rem 0.8rem;
+    color: #fff;
+    border-radius: 5px;
+    margin-left: 20px;
+}
+.swiper-button-prev:after {
+    font-size: 1rem !important;
+    font-weight: bold;
+    background: rgba(0,0,0,0.6);
+    padding: 0.6rem 0.8rem;
+    color: #fff;
+    border-radius: 5px;
+    margin-right: 20px;
+}
+.swiper-slide img{
+    border-radius: 8px;
 }
