--- a/src/assets/scss/component/IndianCasinoBody.scss
+++ b/src/assets/scss/component/IndianCasinoBody.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 10px;
+  margin-bottom: 0.7rem
 }
 
 .casino-image {
