--- a/src/assets/scss/component/SlotsBody.scss
+++ b/src/assets/scss/component/SlotsBody.scss
@@ -25,7 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-bottom: 0.2rem;
 }
 .slots-tab .slots-title {
@@ -50,4 +50,7 @@
   display: block;
   width: 110px;
   font-weight: 500;
+}
+.slots-container{
+  padding-top: 3.6rem;
 }
