--- a/src/assets/scss/layout/NavBar.scss
+++ b/src/assets/scss/layout/NavBar.scss
@@ -1,38 +1,147 @@
-header {
-    background-color: #212A3E;
+.header {
+  position: relative;
+  padding: 0 1rem;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  background-color: #212a3e;
+  border-bottom: 1px solid #e5e5e5;
 }
-nav{
-    max-width: 98rem;
-}
-.logo-img {
-    width: 200%
-}
-
-.company-logo {
-    color: #fff;
-    font-size: 1.8rem;
-    font-weight: 700;
-    text-transform: uppercase;
+.left {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
 
-.company-logo span {
-    background-color: #189e5a;
-    padding: 0px 5px 0px 0px;
-    border-radius: 0.6rem;
-    color: #212A3E;
+.right {
+  display: flex;
+  align-items: center;
+  color: #fff;
+  font-size: 0.8rem;
+  font-weight: 600;
 }
-.nav-menu{
+.right .login-btn {
+  cursor: pointer;
+  color: #cfd4d8;
+  background-color: transparent;
+  padding: 0 16px;
+  font-size: 12px;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+}
+
+.right .signup-btn {
+  cursor: pointer;
+  color: #fff;
+  background-color: #169c59;
+  padding: 8px 16px;
+  font-size: 12px;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 5px;
+}
+
+.nav {
+  height: calc(var(--header-height) + 1.5rem);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 1rem;
+}
+
+.nav-logo,
+.nav-toggle {
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  font-size: 1.8rem;
+}
+
+.nav-list {
+  display: flex;
+}
+.nav-link {
+  padding: 1rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 13px;
+  color: #fff;
+  font-weight: 600;
+  transition: 300ms;
+  position: relative;
+  text-transform: capitalize;
+}
+
+.nav-link:hover {
+  color: #fff;
+  background: rgba(200, 200, 200, 0.5);
+  transition: width 0.1s ease 0s, left 0.3s ease 0s;
+}
+
+/* For Active link */
+.active-link,
+.nav-link:hover {
+  color: var(--title-color-dark);
+}
+
+@media screen and (max-width: 768px) {
+  .nav-list .mobileView:last-child {
+    display: none;
+  }
+  .header {
+    padding: 1rem;
+  }
+
+  .nav {
+    height: var(--header-height);
+    padding-left: 3rem !important;
+  }
+
+  .nav-menu {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #4e4e4e;
+    padding: 0.3rem 1.2rem;
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+    transition: 300ms;
+  }
+
+  .show-menu {
+    bottom: 0;
+  }
+
+  .nav-list {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 0rem;
+    justify-items: center;
+  }
+  .nav-link {
+    display: block;
+    font-size: 13px;
+    padding: 0rem 1rem;
+  }
+
+  .nav-icon {
+    font-size: 1.5rem;
+  }
+  .mobileView {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+  }
+  .mobileView svg {
+    font-size: 1.6rem;
+    color: #e5e5e5;
+  }
 }
-.nav-menu a{
-    color: #fff;
-    padding: 1.2rem 0.8rem;
-    text-transform: uppercase;
-    font-size: 0.8rem;
-}
-.nav-menu a:active{
-    background-color: rgba(255, 255, 255, 0.2);
-}
-.nav-menu a:hover{
-    background-color: rgba(255, 255, 255, 0.2);
+
+@media screen and (max-width: 480px) {
+  .nav-link {
+    font-size: 11px;
+    padding: 0;
+  }
 }
