--- a/src/assets/scss/component/InPlayBody.scss
+++ b/src/assets/scss/component/InPlayBody.scss
@@ -12,4 +12,10 @@
 }
 .inPlay-section{
   margin-bottom: 1rem !important;
+  padding-top: 3.6rem;
+}
+@media screen and (max-width: 768px) {
+  .inPlay-section{
+    padding-top: 4.2rem;
+  }
 }
