--- a/src/assets/scss/component/LiveData.scss
+++ b/src/assets/scss/component/LiveData.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   gap: 0.6rem;
-  padding: 0.2rem 1rem;
+  padding: 0.2rem 0.2rem;
   background-color: rgba(200, 200, 200, 0.5);
   border-bottom: 1px solid grey;
 }
@@ -24,10 +24,11 @@
   display: flex;
   flex-direction: column;
   background-color: #cfcfcf;
-  padding: 0.2rem 1.2rem;
+  padding: 0.2rem 0.8rem;
   margin: 0.2rem 0.2rem;
   border-radius: 6px;
   text-align: center;
+  flex-grow: 1;
 }
 
 .livedata-tab .top {
@@ -54,5 +55,8 @@
     margin: 0.2rem 0.2rem;
   }
 }
-
-
+@media screen and (max-width: 480px) {
+  .livedata {
+    flex-wrap: wrap;
+  }
+}
