--- a/src/assets/scss/component/SportsBody.scss
+++ b/src/assets/scss/component/SportsBody.scss
@@ -10,7 +10,10 @@
 .match-availability .message-highlight {
   color: #169c59;
 }
-
+.page-wrapper{
+  display: flex;
+  // padding: 3.6rem 0 0;
+}
 .rotate-animation {
   transition: all 0.2s;
   transform: rotate(180deg);
@@ -18,6 +21,28 @@
 .remove-rotation-animation {
   transition: all 0.2s;
 }
-.sports-container{
-  margin: 1rem !important;
+.sports-section{
+  padding-top: 4rem;
+}
+.sports-container {
+  margin: 0 0.4rem !important;
+}
+@media screen and (max-width: 768px) {
+  .sports-right {
+    display: none;
+  }
+  .sports-container {
+    margin: 0.2rem !important;
+  }
+  .btn-wrapper div:nth-child(n + 8) {
+    display: none;
+  }
+  .sports-section{
+    padding-top: 5rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .btn-wrapper div:nth-child(n + 5) {
+    display: none;
+  }
 }
