--- a/src/container/SportsHomepage.scss
+++ b/src/container/SportsHomepage.scss
@@ -1,6 +1,10 @@
-.container{
-    min-width: 1000px;
-    width: 100%;
-    
-    margin: auto;
+.container {
+  width: 100%;
+  // min-width: 1024px;
+  max-width: 1240px;
+  margin: auto;
+}
+.sports-container{
+  height: 95vh;
+  overflow: auto;
 }
