--- a/src/assets/scss/layout/Home.scss
+++ b/src/assets/scss/layout/Home.scss
@@ -1,6 +1,6 @@
-.page-wrapper{
+.homepage-wrapper{
     display: flex;
-    // padding: 3.6rem 0 0;
+    padding: 3.6rem 0;
 }
 .home-page ul{
     width: 250px;
