--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
         --text-pink: #EF5480;
         --text-dark: #32383e;
 
-        --scrollbar-color: #4C555E;
+        --scrollbar-color: #4c555e;
     }
 
     /* #f8f9fa; */
